--- a/ngLessonLocker/src/app/app.component.html
+++ b/ngLessonLocker/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="container">
+<main class="container-fluid"> 
+  <app-navigation></app-navigation> 
   <router-outlet></router-outlet>
-</div>
+</main>
