--- a/ngLessonLocker/src/app/components/navigation/navigation.component.html
+++ b/ngLessonLocker/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/home">Navbar</a>
+      <a class="navbar-brand" routerLink="/home">Lesson Locker</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -11,15 +11,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/contact">Contact</a>
-          </li>
-          <li class="nav-item" *ngIf="isLoggedIn()">
-            <a class="nav-link" routerLink="/todo">Todo List</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/profile']">Login</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
