--- a/ngLessonLocker/src/app/components/register/register.component.html
+++ b/ngLessonLocker/src/app/components/register/register.component.html
@@ -7,5 +7,13 @@
       <label for="password">Password</label>
       <input type="password" class="form-control" id="password" [(ngModel)]="newUser.password" name="password" placeholder="Create a password" required>
     </div>
+    <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input type="firstName" class="form-control" id="firstName" [(ngModel)]="newUser.firstName" name="firstName" placeholder="First Name" required>
+    </div>
+    <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input type="lastName" class="form-control" id="lastName" [(ngModel)]="newUser.lastName" name="lastName" placeholder="Last Name" required>
+    </div>
     <button type="button" class="btn btn-primary" (click)="register(newUser)">Register</button>
   </form>
