--- a/ngLessonLocker/src/app/components/navigation/navigation.component.html
+++ b/ngLessonLocker/src/app/components/navigation/navigation.component.html
@@ -23,6 +23,9 @@
           <li class="nav-item" *ngIf="isLoggedIn()">
             <a class="nav-link" (click)="logout()">Logout</a>
           </li>
+          <li class="nav-item" *ngIf="isLoggedIn()">
+            <a class="nav-link" routerLink="/users">Users</a>
+          </li>
         </ul>
       </div>
     </div>
