--- a/ngLessonLocker/src/app/components/users/users.component.html
+++ b/ngLessonLocker/src/app/components/users/users.component.html
@@ -1,1 +1,38 @@
-<p>users works!</p>
+<div *ngIf="!selected">
+    <table class="table table-striped table-hover">
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">Username</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Cohort</th>
+        <th scope="col">Enabled</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of users">
+        <td (click)="displayUser(user)">{{ user.username }}</td>
+        <td>{{ user.firstName }}</td>
+        <td>{{ user.lastName }}</td>
+        <td>{{ user.cohort }}</td>
+        <td><input type="checkbox" class="form-check-input" [(ngModel)]="user.enabled" (change)="updateUser()"></td>
+        <td>
+          <button class="btn btn-danger" (click)="deleteUser(user.id)">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+
+  <div *ngIf="selected">
+    <h2>User Details:</h2>
+    <p>ID: {{ selected.id }}</p>
+    <p>Username: {{ selected.username }}</p>
+    <p>First Name: {{ selected.firstName }}</p>
+    <p>Last Name: {{ selected.lastName }}</p>
+    <p>Cohort: {{ selected.cohort }}</p>
+    <p>Enabled: {{ selected.enabled ? 'Yes' : 'No'  }}</p>
+    <button class="btn btn-warning" (click)="displayTable()">Display All Users</button>
+    
+  </div>
