List of questions angular view; basic form

--- a/ngLessonLocker/src/app/components/questions/questions.component.html
+++ b/ngLessonLocker/src/app/components/questions/questions.component.html
@@ -1,1 +1,25 @@
-<p>questions works!</p>
+<div *ngIf="!selected">
+    <table class="table table-striped table-hover">
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Question</th>
+        <th scope="col">Hint</th>
+        <th scope="col">Explanation</th>
+        <th scope="col">Updated At</th>
+        <th scope="col">Created At</th>
+
+      </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let question of questions">
+        <td (click)="showQuestionDetail(question)">{{ question.id }}</td>
+        <td (click)="showQuestionDetail(question)">{{ question.question }}</td>
+        <td (click)="showQuestionDetail(question)">{{ question.hint }}</td>
+        <td (click)="showQuestionDetail(question)">{{ question.explanation }}</td>
+        <td (click)="showQuestionDetail(question)">{{ question.updatedAt }}</td>
+        <td (click)="showQuestionDetail(question)">{{ question.createdAt }}</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
