--- a/ngLessonLocker/src/app/components/question-edit/question-edit.component.html
+++ b/ngLessonLocker/src/app/components/question-edit/question-edit.component.html
@@ -1,1 +1,5 @@
-<p>question-edit works!</p>
+<!-- <form>
+    <input type="text" [(ngModel)]="user.username" name="username" placeholder="Username" required>
+    <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required>
+    <button type="button" (click)="login(user)">Login</button>
+  </form> -->
