--- a/ngLessonLocker/src/app/components/users/users.component.html
+++ b/ngLessonLocker/src/app/components/users/users.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!selected">
-    <table class="table table-striped table-hover">
+  <table class="table table-striped table-hover">
     <thead class="table-dark">
       <tr>
         <th scope="col">Username</th>
@@ -11,33 +11,53 @@
       </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let user of users">
+      <tr *ngFor="let user of users">
         <td (click)="displayUser(user)">{{ user.username }}</td>
         <td (click)="displayUser(user)">{{ user.firstName }}</td>
         <td (click)="displayUser(user)">{{ user.lastName }}</td>
         <td (click)="displayUser(user)">{{ user.cohort }}</td>
-        <td><input type="checkbox" class="form-check-input" [(ngModel)]="user.enabled" (change)="updateUser(user.id)"></td>
         <td>
-          <button class="btn btn-danger" (click)="deleteUser(user)">Delete</button>
+          <input
+            type="checkbox"
+            class="form-check-input"
+            [(ngModel)]="user.enabled"
+            (change)="updateUser(user.id)"
+          />
+        </td>
+        <td>
+          <button class="btn btn-danger" (click)="deleteUser(user)">
+            Delete
+          </button>
         </td>
       </tr>
     </tbody>
   </table>
-  </div>
+</div>
 
-  <div *ngIf="selected">
-    <h2>User Details:</h2>
-    <p>ID: {{ selected.id }}</p>
-    <p>Username: {{ selected.username }}</p>
-    <p>First Name: {{ selected.firstName }}</p>
-    <p>Last Name: {{ selected.lastName }}</p>
-    <p>Cohort: {{ selected.cohort }}</p>
-    <div class="form-group">
-        <label for="cohort">Cohort</label>
-        <input type="text" class="form-control" id="cohort" [(ngModel)]="selected.cohort" name="cohort" placeholder="Ex. SD43" required>
-    </div>
-    <p>Enabled: {{ selected.enabled ? 'Yes' : 'No'  }}</p>
-    <button class="btn btn-warning" (click)="displayTable()">Display All Users</button>
-    <button class="btn btn-primary" (click)="updateUser(selected.id)">Update</button>
-    
+<div *ngIf="selected">
+  <h2>User Details:</h2>
+  <p>ID: {{ selected.id }}</p>
+  <p>Username: {{ selected.username }}</p>
+  <p>First Name: {{ selected.firstName }}</p>
+  <p>Last Name: {{ selected.lastName }}</p>
+  <p>Cohort: {{ selected.cohort }}</p>
+  <div class="form-group">
+    <label for="cohort">Cohort</label>
+    <input
+      type="text"
+      class="form-control"
+      id="cohort"
+      [(ngModel)]="selected.cohort"
+      name="cohort"
+      placeholder="Ex. SD43"
+      required
+    />
   </div>
+  <p>Enabled: {{ selected.enabled ? "Yes" : "No" }}</p>
+  <button class="btn btn-warning" (click)="displayTable()">
+    Display All Users
+  </button>
+  <button class="btn btn-primary" (click)="updateUser(selected.id)">
+    Update
+  </button>
+</div>
