Misc front end improvements and README

--- a/ngLessonLocker/src/app/components/login/login.component.html
+++ b/ngLessonLocker/src/app/components/login/login.component.html
@@ -1,5 +1,27 @@
-<form>
-    <input type="text" [(ngModel)]="user.username" name="username" placeholder="Username" required>
-    <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required>
-    <button type="button" (click)="login(user)">Login</button>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Login</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <form name="loginForm" class="bg-light p-5 rounded">
+        <div class="form-group m-2">
+          <!-- <label for="username">Username: &nbsp;</label> -->
+          <input class="form-control" type="text" [(ngModel)]="user.username" name="username" placeholder="Username"
+            required>
+        </div>
+        <div class="form-group m-2">
+          <!-- <label for="password">Password: &nbsp;</label> -->
+          <input class="form-control" type="password" [(ngModel)]="user.password" name="password" placeholder="Password"
+            required>
+        </div>
+        <hr>
+        <div class="form-groupm m-2">
+          <button class="btn btn-success" type="submit" (click)="login(user)">Login</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
