--- a/ngLessonLocker/src/app/components/about/about.component.html
+++ b/ngLessonLocker/src/app/components/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>About</h1>
+        </div>
+    </div>
+</div>
