--- a/ngLessonLocker/src/app/components/register/register.component.html
+++ b/ngLessonLocker/src/app/components/register/register.component.html
@@ -1,19 +1,35 @@
-<form>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" [(ngModel)]="newUser.username" name="username" placeholder="Choose a username" required>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Register</h1>
     </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" [(ngModel)]="newUser.password" name="password" placeholder="Create a password" required>
+  </div>
+  <div class="row">
+    <div class="col">
+      <form name="registerForm" class="bg-light p-5 rounded">
+        <div class="form-group m-2">
+          <!-- <label for="username">Username: &nbsp;</label> -->
+          <input type="text" class="form-control" id="username" [(ngModel)]="newUser.username" name="username"
+            placeholder="Choose a username" required>
+        </div>
+        <div class="form-group m-2">
+          <!-- <label for="password">Password: &nbsp;</label> -->
+          <input type="password" class="form-control" id="password" [(ngModel)]="newUser.password" name="password"
+            placeholder="Create a password" required>
+        </div>
+        <div class="form-group m-2">
+          <!-- <label for="firstName">First Name: &nbsp;</label> -->
+          <input type="firstName" class="form-control" id="firstName" [(ngModel)]="newUser.firstName" name="firstName"
+            placeholder="First Name" required>
+        </div>
+        <div class="form-group m-2">
+          <!-- <label for="lastName">Last Name: &nbsp;</label> -->
+          <input type="lastName" class="form-control" id="lastName" [(ngModel)]="newUser.lastName" name="lastName"
+            placeholder="Last Name" required>
+        </div>
+        <hr>
+        <button type="submit" class="btn btn-success" (click)="register(newUser)">Register</button>
+      </form>
     </div>
-    <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input type="firstName" class="form-control" id="firstName" [(ngModel)]="newUser.firstName" name="firstName" placeholder="First Name" required>
-    </div>
-    <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input type="lastName" class="form-control" id="lastName" [(ngModel)]="newUser.lastName" name="lastName" placeholder="Last Name" required>
-    </div>
-    <button type="button" class="btn btn-primary" (click)="register(newUser)">Register</button>
-  </form>
+  </div>
+</div>
