--- a/ngLessonLocker/src/app/components/welcome/welcome.component.html
+++ b/ngLessonLocker/src/app/components/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Instructor Question Review</h1>
+            <h1>Welcome to Lesson Locker</h1>
         </div>
     </div>
 </div>
