Instructor question queries

--- a/ngLessonLocker/src/app/components/reviews/reviews.component.html
+++ b/ngLessonLocker/src/app/components/reviews/reviews.component.html
@@ -6,14 +6,18 @@
     </div>
     <div class="row">
         <div class="col">
+            <label for="tag">Tag</label>
+            <input class="form-control" type="text" [(ngModel)]="tag" name="tag" placeholder="">
             <button class="btn btn-primary" (click)="getAllQuestions()">Get All Questions</button>
         </div>
         <div class="col">
+            <label for="username">Username</label>
             <input class="form-control" type="text" [(ngModel)]="username" name="username" placeholder="">
             <button class="btn btn-primary" (click)="getAllQuestionsByUserUsername(username)">Get All Questions By User
                 Username</button>
         </div>
         <div class="col">
+            <label for="cohort">Cohort</label>
             <input class="form-control" type="text" [(ngModel)]="cohort" name="cohort" placeholder="">
             <button class="btn btn-primary" (click)="getAllQuestionsByUserCohort(cohort)">Get All Questions By User
                 Cohort</button>
@@ -44,7 +48,7 @@
                     <th>Updated At</th>
                     <th>Created At</th>
                     <th>Enabled</th>
-                    <!-- <th>User Id</th> -->
+                    <th>User Id</th>
                 </thead>
                 <tr *ngFor="let question of questions" (click)="showQuestionDetail(question)">
                     <td>{{question.id}}</td>
@@ -54,7 +58,7 @@
                     <td>{{question.updatedAt}}</td>
                     <td>{{question.createdAt}}</td>
                     <td>{{question.enabled}}</td>
-                    <!-- <td>{{question | json}}</td> -->
+                    <td>{{question | json}}</td>
                 </tr>
             </table>
         </div>
