--- a/ngLessonLocker/src/app/components/navigation/navigation.component.html
+++ b/ngLessonLocker/src/app/components/navigation/navigation.component.html
@@ -27,7 +27,7 @@
         <li class="nav-item" *ngIf="isLoggedIn() && hasRole('admin')">
           <a class="nav-link" routerLink="/users">Users</a>
         </li>
-        <li class="nav-item" *ngIf="isLoggedIn() && hasRole('student')">
+        <li class="nav-item" *ngIf="isLoggedIn() && (hasRole('student') || hasRole('instructor'))">
           <a class="nav-link" routerLink="/questions">Questions</a>
         </li>
         <li class="nav-item" *ngIf="isLoggedIn() && hasRole('instructor')">
