--- a/ngLessonLocker/src/app/components/review/review.component.html
+++ b/ngLessonLocker/src/app/components/review/review.component.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col">
             <h1>Instructor Question Review</h1>
+            <p>Selected Question Id: {{this.selectedQuestionId}}</p>
         </div>
     </div>
 </div>
