--- a/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.html
+++ b/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.html
@@ -1,1 +1,7 @@
-<p>instructor-break works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Instructor Break Question</h1>
+        </div>
+    </div>
+</div>
