--- a/ngLessonLocker/src/app/components/review/review.component.html
+++ b/ngLessonLocker/src/app/components/review/review.component.html
@@ -1,19 +1,18 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Instructor Question Review</h1>
+            <p class="text-center">Selected Question Id: {{this.selectedQuestionId}}</p>
         </div>
     </div>
 </div>
-
 <div class="container">
     <div class="row">
         <div class="col">
-            <p>Selected Question Id: {{this.selectedQuestionId}}</p>
             <app-question [selectedQuestion]="this.selected"></app-question>
         </div>
         <div class="col">
             <form name="createHostQuestionForm" class="bg-light p-5 rounded">
+                <h1 class="text-center">Instructor Create Hosted Question</h1>
                 <div class="form-group m-2">
                     <label for="quizTitle">Quiz Title: &nbsp;</label>
                     <input type="text" class="form-control" id="quizTitle" [(ngModel)]="quizTitle" name="quizTitle"
