Question component for reviews progress

--- a/ngLessonLocker/src/app/components/question/question.component.css
+++ b/ngLessonLocker/src/app/components/question/question.component.css
@@ -5,3 +5,10 @@ span {
     text-decoration: underline;
 }
 
+.border-success {
+    border: 2px solid green;
+}
+
+.border-danger {
+    border: 2px solid red;
+}
