--- a/ngLessonLocker/src/app/components/question/question.component.html
+++ b/ngLessonLocker/src/app/components/question/question.component.html
@@ -8,7 +8,8 @@
         </div>
     </div>
 
-    <div *ngIf="this.selectedQuestion!==null" class="container">
+    <div *ngIf="this.selectedQuestion!==null" class="container"
+        [ngClass]="selectedQuestion.enabled ? 'border-success' : 'border-danger'">
         <div class="row">
             <div class="col">
                 <p><span>Id:</span> {{selectedQuestion.id}}</p>
@@ -40,9 +41,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <button class="btn btn-primary m-2" (click)="editQuestion()">Edit</button>
-                <button class="btn btn-danger m-2" (click)="deleteQuestion()">Delete</button>
+            <div class="col text-center">
+                <button class="btn btn-success m-2" (click)="enableQuestion()">Enable</button>
+                <button class="btn btn-warning m-2" (click)="disableQuestion()">Disable</button>
+            </div>
+            <div class="col text-center">
+                <button disabled class="btn btn-primary m-2" (click)="editQuestion()">Edit</button>
             </div>
         </div>
     </div>
