--- a/ngLessonLocker/src/app/components/reviews/reviews.component.html
+++ b/ngLessonLocker/src/app/components/reviews/reviews.component.html
@@ -50,7 +50,8 @@
                     <th>Enabled</th>
                     <th>User</th>
                 </thead>
-                <tr *ngFor="let question of questions" (click)="showQuestionDetail(question)">
+                <tr *ngFor="let question of questions" (click)="showQuestionDetail(question)"
+                    [ngClass]="question.enabled ? 'text-success' : 'text-danger'">
                     <td>{{question.id}}</td>
                     <td>{{question.question}}</td>
                     <td>{{question.hint}}</td>
