--- a/ngLessonLocker/src/app/components/reviews/reviews.component.html
+++ b/ngLessonLocker/src/app/components/reviews/reviews.component.html
@@ -56,8 +56,8 @@
                     <td>{{question.question}}</td>
                     <td>{{question.hint}}</td>
                     <td>{{question.explanation}}</td>
-                    <td>{{question.updatedAt}}</td>
-                    <td>{{question.createdAt}}</td>
+                    <td>{{question.updatedAt | date: 'dd/MM/yyyy HH:MM:ss'}}</td>
+                    <td>{{question.createdAt | date: 'dd/MM/yyyy HH:MM:ss'}}</td>
                     <td>{{question.enabled}}</td>
                     <td>{{question.user.username}}</td>
                 </tr>
